# forex_trading_system

./: .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: data_models.py  forex_pairs.yaml  risk_params.yaml  settings.py
src/api/: app.py  middleware.py
src/api/routes/: __init__.py  backtest.py  market.py  metrics.py  orders.py  portfolio.py  strategies.py
src/backtest/: __init__.py  engine.py  models.py  report.py
src/cli/: cli.py
src/dashboard/: app.py
src/execution/: __init__.py  engine.py  models.py  order.py  order_manager.py  paper_engine.py  position.py
src/indicators/: __init__.py  adx.py  atr.py  base.py  bollinger.py  donchian.py  ema.py  macd.py  rsi.py  sma.py  stochastic.py  vwap.py
src/market_data/: __init__.py  cache.py  fetcher.py  models.py  service.py  streaming.py
src/portfolio/: __init__.py  manager.py  models.py  performance.py
src/risk/: __init__.py  models.py  position_sizer.py  risk_manager.py
tests/: conftest.py
tests/test_indicators/: test_atr.py  test_bollinger.py  test_ema.py  test_macd.py  test_rsi.py  test_sma.py
